Rewrite Client README for desktop users